Repackage JRE locale provider thirdparty sources; wire up build-time generation
Repackage all 371 sun.util.locale.provider JRE locale stack files copied in
the previous commit from their original OpenJDK packages (sun.util.*,
sun.text.*, sun.security.*, build.tools.*) to
com.appiancorp.jre17.compact.thirdparty.*, updating every package
declaration and import to match. Add a "Modified by Appian Corp., 2026"
notice to each file's license header. No files were moved; only package/
import statements and the handful of adaptations below were changed in
place, all under their existing paths from the copy commit.

Beyond the mechanical package rename, a few files needed small adaptations
to compile and behave correctly outside the JDK's own module/build system:

- LocaleProviderAdapter.Type.JRE/FALLBACK: repackage the class-name and
  resource-bundle-package string literals used for reflective
  Class.forName lookups (LocaleData.getBundle, adapter instantiation).
  CLDR/SPI/HOST are left as their original, unresolvable values since this
  library only ever selects java.locale.providers=JRE and never loads those
  adapter types.
- sun.util.resources.Bundles: replaced its use of the JDK-internal
  jdk.internal.access.SharedSecrets/JavaUtilResourceBundleAccess bridge
  (used to set a loaded ResourceBundle's parent/locale/name, not reachable
  from outside java.util without --add-opens) with the new
  AppianResourceBundleState interface, implemented by the new
  AppianListResourceBundle base class and the existing OpenListResourceBundle/
  ParallelListResourceBundle/BreakIteratorResourceBundle.
- sun.text.resources.{BreakIteratorInfo,BreakIteratorRules,CollationData}
  and their sun.text.resources.ext per-locale subclasses: now extend the new
  AppianListResourceBundle instead of java.util.ListResourceBundle directly,
  for the same AppianResourceBundleState support.
- CalendarSystem, ZoneInfoFile, GenerateBreakIteratorData,
  JRELocaleProviderAdapter, LocaleResources, TimeZon